--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-pwa": "^5.6.0",
     "postgres": "^3.4.7",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
