--- a/.dockerignore
+++ b/.dockerignore
@@ -20,3 +20,12 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.vscode
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
