--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+        - NEXTAUTH_URL=${NEXTAUTH_URL}
+        - DATABASE_URL=${DATABASE_URL}
+        - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+        - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+    image: workout-tracker:test-1.0
     ports:
       - 3000:3000
     env_file:
       - .env.docker
+      - .env
     depends_on:
       - db
   db:
