--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.3",
+    "lucide-react": "^0.540.0",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
