--- a/package.json
+++ b/package.json
@@ -13,18 +13,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
     "@heroicons/react": "^2.2.0",
-    "bcrypt": "^6.0.0",
-    "clsx": "^2.1.1",
-    "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.3",
-    "lucide-react": "^0.540.0",
-    "next": "15.4.1",
-    "next-auth": "^4.24.11",
-    "next-pwa": "^5.6.0",
-    "postgres": "^3.4.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.0.13","@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -35,7 +24,7 @@
     "@radix-ui/react-dialog": "1.1.4",
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-hover-card": "1.1.4",
-    "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "1.1.4",
     "@radix-ui/react-navigation-menu": "1.2.3",
     "@radix-ui/react-popover": "1.1.4",
@@ -54,14 +43,26 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.3",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "lucide-react": "^0.540.0",
+    "motion": "12.23.13",
+    "next": "15.4.1",
+    "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
+    "react": "19.1.0",
     "react-day-picker": "9.8.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -69,7 +70,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "motion": "12.23.13"
+    "zod": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -82,9 +83,9 @@
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "postcss": "^8",
     "tailwindcss": "^4",
-    "typescript": "^5",
     "tw-animate-css": "1.3.3",
-    "postcss": "^8"
+    "typescript": "^5"
   }
 }
