--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lucide-react": "^0.540.0",
     "motion": "12.23.13",
     "next": "15.4.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
