--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next-auth": "^5.0.0-beta.29",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
+  "web-push": "^3.5.0",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-day-picker": "9.8.0",
