--- a/package.json
+++ b/package.json
@@ -55,21 +55,21 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.540.0",
     "motion": "12.23.13",
-    "next": "15.4.1",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.29",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
-  "web-push": "^3.5.0",
     "postgres": "^3.4.7",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "web-push": "^3.5.0",
     "zod": "^4.0.13"
   },
   "devDependencies": {
