--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --webpack",
+    "build:no-pwa": "DISABLE_NEXT_PWA=true next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
