--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -88,7 +91,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
-  },"engines": {
-  "node": "20.x"
-}
+  },
+  "engines": {
+    "node": "20.x"
+  }
 }
